moved the rights reserved thing to the bottom

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body style="height: calc(100% - 40px);">
 		<Header title={SITE_TITLE} />
 		<main>
 			<h1>projects</h1>
