--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,6 +106,7 @@ div#smallmenu {
     justify-content: center;
     align-items: center;
 }
+footer {position: absolute;bottom: 0;}
 a {
 	text-decoration: none !important;
 }
