--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100vh;">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body style="height: calc(100% - 40px);">
 		<Header title={SITE_TITLE} />
 		<main>
 			<h1>about me</h1>
