finished about me page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,45 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>about me</h1>
 			<p>
-				about me elements
+				Hello! You can find some basic info about me and my environment below.
+I'm interested in Windows and web development. I didn't dive into web frameworks yet, but that's next on the list.
+I also really like k-pop if you couldn't already tell from my online presence. I prefer cats over dogs, and also i'm extroverted.
+I find any kind of predictions really interesting. Like how can people tell you who you are just based on when and where you were born? Absolutely fascinating. Online quizzes are also my cup of tea.
 			</p>
+			<div class="tablecontainer">
+				<div class="tableframe">
+					<table>
+						<tr>
+							<td><b>Nationality</b></td>
+							<td>Poland</td>
+						</tr>
+						<tr>
+							<td><b>Age</b></td>
+							<td>14</td>
+						</tr>
+						<tr>
+							<td><b>Pronouns</b></td>
+							<td>he/him</td>
+						</tr>
+					</table>
+				</div>
+				<div class="tableframe">
+					<table>
+						<tr>
+							<td><b>IDE</b></td>
+							<td>Visual Studio 2022</td>
+						</tr>
+						<tr>
+							<td><b>Design</b></td>
+							<td>Figma</td>
+						</tr>
+						<tr>
+							<td><b>Notes</b></td>
+							<td>Notion</td>
+						</tr>
+					</table>
+				</div>
+			</div>
 		</main>
 		<Footer />
 	</body>
