--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,12 @@
  */
  @import url('https://fonts.googleapis.com/css2?family=PT+Mono&family=Unbounded:wght@300&display=swap');
  @media (prefers-color-scheme: dark) {
+	table td, table th {
+		border: .2px solid white;
+	}
+	.tableframe {
+		border: .2px solid white;
+	}
 	html body {
 		background-color: black;
 		color:white;
@@ -40,6 +46,12 @@
 }
 
 @media (prefers-color-scheme: light) {
+	table td, table th {
+		border: .2px solid black;
+	}
+	.tableframe {
+		border: .2px solid black;
+	}
 	img.pfp.astro-3EF6KSR2 {
 		filter: invert(1);
 	}
@@ -79,6 +91,17 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
+table td {
+	padding: 8px;
+}
+.tablecontainer {
+	display: flex;
+	flex-direction: row;
+	justify-content:center;
+	width: 100%;
+	align-items: center;
+	gap:15px;
+}
 .smallmenu {
 	font-family: 'Unbounded', sans-serif !important;
 	text-decoration: none !important;
@@ -92,6 +115,17 @@ div#smallmenu {
     align-items: center;
     justify-content: center;
     height: 100%;
+}
+table {
+    border-collapse: collapse;
+    border-style: hidden;
+}
+table, .tableframe {
+	max-width: 400px;
+	min-width: 250px;
+}
+.tableframe {
+	border-radius: 15px;
 }
 .mobilebody {
 	padding: 0;
@@ -164,6 +198,9 @@ blockquote {
 @media only screen and (max-width: 638px) {
 	.menubutton {
 		display: flex !important;
+	}
+	.tablecontainer {
+		flex-direction: column !important;
 	}
 	.bigmenu {
 		display: none;
