--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,13 +10,31 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body style="height: calc(100% - 40px);">
+	<body style="height: calc(100% - 40px); display:flex; flex-direction:column;">
 		<Header title={SITE_TITLE} />
 		<main>
 			<h1>projects</h1>
-			<p>
-				projects elements
-			</p>
+			<div class="projectgrid">
+				<div class="projectframe">
+					<div><h2>test</h2>
+					<p>test description test description test description test description test description test description test description test description</p></div>
+					<div class="tags">
+						<a class="tag" style="color:black; border-color: black; background-color:rgba(0,0,0,.15)" href="https://github.com/shef3r/Translate">GitHub</a>
+						<a class="tag" style="color:lightblue; border-color: lightblue;" href="https://t.me/TranslateUpdates">TG Updates</a>
+						<a class="tag" style="color:greenyellow; border-color: greenyellow;">Public</a>
+						<a class="tag" style="color:gray; border-color: gray;">UWP</a>
+						<a class="tag" style="color:gray; border-color: gray;">Silverlight</a>
+					</div>
+				</div>
+				<div class="projectframe"></div>
+				<div class="projectframe"></div>
+				<div class="projectframe"></div>
+				<div class="projectframe"></div>
+				<div class="projectframe"></div>
+				<div class="projectframe"></div>
+				<div class="projectframe"></div>
+				<div class="projectframe"></div>
+			</div>
 		</main>
 		<Footer />
 	</body>
