--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -16,24 +16,35 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<h1>projects</h1>
 			<div class="projectgrid">
 				<div class="projectframe">
-					<div><h2>test</h2>
-					<p>test description test description test description test description test description test description test description test description</p></div>
+					<div><h2>Translate</h2>
+					<p>a Google Translate client for Windows 10/11 (and WP8.1)</p></div>
 					<div class="tags">
-						<a class="tag" style="color:black; border-color: black; background-color:rgba(0,0,0,.15)" href="https://github.com/shef3r/Translate">GitHub</a>
+						<a class="tag gh" href="https://github.com/shef3r/Translate">GitHub</a>
 						<a class="tag" style="color:lightblue; border-color: lightblue;" href="https://t.me/TranslateUpdates">TG Updates</a>
 						<a class="tag" style="color:greenyellow; border-color: greenyellow;">Public</a>
 						<a class="tag" style="color:gray; border-color: gray;">UWP</a>
 						<a class="tag" style="color:gray; border-color: gray;">Silverlight</a>
 					</div>
 				</div>
-				<div class="projectframe"></div>
-				<div class="projectframe"></div>
-				<div class="projectframe"></div>
-				<div class="projectframe"></div>
-				<div class="projectframe"></div>
-				<div class="projectframe"></div>
-				<div class="projectframe"></div>
-				<div class="projectframe"></div>
+				<div class="projectframe">
+					<div><h2>foresky</h2>
+						<p>an open-source fluent weather app for windows 10+</p></div>
+						<div class="tags">
+							<a class="tag gh" href="https://github.com/shef3r/foresky">GitHub</a>
+							<a class="tag" style="color:greenyellow; border-color: greenyellow;">Public</a>
+							<a class="tag" style="color:gray; border-color: gray;">UWP</a>
+							<a class="tag" style="color:gray; border-color: gray;">In Progress</a>
+						</div>
+				</div>
+				<div class="projectframe">
+					<div><h2>ferrpad</h2>
+						<p>a UWP text editor for Windows 10/11! (mostly functional)</p></div>
+						<div class="tags" style="justify-content:center; gap:8px;">
+							<a class="tag gh" href="https://github.com/shef3r/ferrpad">GitHub</a>
+							<a class="tag" style="color:greenyellow; border-color: greenyellow;">Public</a>
+							<a class="tag" style="color:gray; border-color: gray;">UWP</a>
+						</div>
+				</div>
 			</div>
 		</main>
 		<Footer />
